# famlafl

./: .coverage  .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  combined_BTCETH.parquet  combined_SOLUSDT.parquet  pyproject.toml  requirements.txt  setup.cfg
.dvc/: config
cmf/: data.dvc  pyproject.toml
cmf/models/: feature_analysis_20241207-165721.txt  feature_importance_catboost_model__LassoFS_count21_loglloss0.677041_2024-Dec-15_11-32.cbm.csv  feature_importance_catboost_model__LassoFS_count21_loglloss0.693146_2024-Dec-14_17-27.cbm.csv  feature_importance_model_count15_loglloss0.676097_2024-Dec-15_12-01.cbm.csv  feature_importance_model_count21_loglloss0.675757_2024-Dec-14_13-50.cbm.csv  feature_importance_sklearn_feature_importances_model__LassoFS_count21_loglloss0.677041_2024-Dec-15_11-32.cbm.csv  feature_importance_sklearn_feature_importances_model__LassoFS_count21_loglloss0.693146_2024-Dec-14_17-27.cbm.csv  mean_abs_shap_feature_importance_model__LassoFS_count21_loglloss0.677041_2024-Dec-15_11-32.cbm.csv  model_2024-Dec-08_18-13.cbm  model_2024-Dec-08_18-19.cbm  model_20241120-033256_model_baseline.cbm  model__LassoFS_count21_loglloss0.677041_2024-Dec-15_11-32.cbm  model__LassoFS_count21_loglloss0.693146_2024-Dec-14_16-54.cbm  model__LassoFS_count21_loglloss0.693146_2024-Dec-14_17-27.cbm  model_count10_loglloss0.676871_2024-Dec-09_21-44.cbm  model_count11_loglloss0.67618_2024-Dec-09_22-07.cbm  model_count12_loglloss0.676164_2024-Dec-09_22-22.cbm  model_count13_loglloss0.676104_2024-Dec-08_19-15.cbm  model_count13_loglloss0.676105_2024-Dec-09_22-43.cbm  model_count13_loglloss0.67676_2024-Dec-10_19-20.cbm  model_count13_loglloss0.67676_2024-Dec-10_19-35.cbm  model_count15_loglloss0.676097_2024-Dec-10_20-06.cbm  model_count15_loglloss0.676097_2024-Dec-15_12-01.cbm  model_count21_loglloss0.675757_2024-Dec-12_15-58.cbm  model_count21_loglloss0.675757_2024-Dec-14_13-50.cbm  model_count21_loglloss0.675757_2024-Dec-15_11-47.cbm  model_count9_loglloss0.6783156809620212_2024-Dec-08_18-39.cbm  model_count9_loglloss0.678801_2025-Jan-09_09-15.cbm  model_default_weighted_and_preprocessed_weights.cbm  model_easy_peasy.cbm  model_easy_peasy_20241128_174431.cbm  model_weighted.cbm  model_weighted_and_preprocessed_weights.cbm  model_with_tscv.cbm  model_with_tscv_20241203-162416.cbm  model_with_tscv_no_weights_20241203-165335.cbm  model_with_tscv_weights_no_preprocessed_20241203-164052.cbm  model_with_tscv_weights_no_preprocessed_20241204-131404.cbm  model_with_tscv_weights_no_preprocessed_20241206-191738.cbm  model_with_tscv_weights_no_preprocessed_20241207-033415.cbm  (+5 more)
cmf/notebooks/: ClsRRED.ipynb  TEST2mod.ipynb  boyko.ipynb  model_qrsprivate.ipynb
cmf/scripts/: Model_qrs.py  Model_qrs2.py  Sambit_qrs2.py  baseline_predictor.py  boyko_baseline_weighted.py  current.py  current_no_tatget_weights.py  easy_peasy_baseline_predictor.py  grid_search_catboost.py  import_data.py  prediction_pipeline.py  sabmit_qrs2.py  trainingindexing.py
cmf/scripts/10_dec/: current_model_f15 copy.py  current_model_f15.py  current_sabmit_f13.py  current_sabmit_f15.py
cmf/scripts/11_dec/: current_model_f.py  test.py
cmf/scripts/12_dec/: current_model_f21_with_mlfinlab.py
cmf/scripts/14_dec/: current_model_f21.py  current_model_f21_Lasso_feature_selection.py  current_model_f21_from_minfinlab_Lasso_feature_selection.py
cmf/scripts/15_dec/: current_model_f15.py  current_sabmit_f15.py
cmf/utils/: baseline_predictor.py  prediction_pipeline.py
(+115 files in other folders)
