[tool.poetry]
name = "timeseries-forecaster"
version = "0.1.0"
description = "A Python project for analyzing and forecasting time series data"
authors = ["Vadim Surin <7uperior@gmail.com>"]
readme = "README.md"
packages = [
    { include = "cmf" }
]

[tool.poetry.dependencies]
python = "^3.12"
catboost = "^1.2.7"
tensorflow = "^2.18.0"
torch = "^2.5.1"
xgboost = "^2.1.2"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
dask = "^2024.11.2"
polars = "^1.14.0"
scikit-learn = "^1.5.2"
lightgbm = "^4.5.0"
seaborn = "^0.13.2"
numba = "^0.60.0"
tqdm = "^4.67.0"
statsmodels = "^0.14.4"
arch = "^7.2.0"
fastparquet = "^2024.11.0"
pyarrow = "^18.0.0"
ta = "^0.11.0"
dvc = "^3.56.0"
dvc-s3 = "^3.2.0"
shap = "^0.46.0"
aiofiles = "^24.1.0"
pytorch-lightning = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
ruff = "^0.8.0"
pre-commit = "^3.5.3"
ipykernel = "^6.29.5"
notebook = "^7.3.1"


[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]
exclude = ["cmf/data/*", "jane_street/data/*"]

[tool.ruff.lint]
select = ["E", "F", "W"]
extend-select = ["I001"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

