[tool.poetry]
name = "cmf"
version = "0.1.0"
description = ""
authors = ["Vadim Surin <7uperior@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
famlafl = "^0.1.9"
catboost = "^1.2.7"
joblib = "^1.4.2"
pandas-ta = "^0.3.14b0"
tslearn = "^0.6.3"
torch = "^2.5.1"
pandas = "^2.2.3"
lightgbm = "^4.5.0"
seaborn = "^0.13.2"
numba = "^0.60.0"
tqdm = "^4.67.1"
scikit-learn = "^1.6.0"
statsmodels = "^0.14.4"
arch = "^7.2.0"
xgboost = "^2.1.3"
fastparquet = "^2024.11.0"
pyarrow = "^18.1.0"
ta = "^0.11.0"
polars = "^1.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
